--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "url": "https://github.com/goto-bus-stop/require-with-global.git"
   },
   "scripts": {
-    "test": "standard && tape test/*.js | tap-spec"
+    "test": "standard && node test/index.js | tap-spec"
   },
   "standard": {
     "ignore": [
