--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "url": "https://github.com/goto-bus-stop/require-with-global/issues"
   },
   "dependencies": {
+    "callsites": "^2.0.0",
     "debug": "^3.1.0",
-    "pirates": "^3.0.2"
+    "is-var-name": "^2.0.0",
+    "pirates": "^3.0.2",
+    "resolve": "^1.7.1"
   },
   "devDependencies": {
     "standard": "^11.0.1",
