--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/goto-bus-stop/require-with-global/issues"
   },
   "dependencies": {
+    "assert": "^1.4.1",
     "callsites": "^2.0.0",
     "debug": "^3.1.0",
     "is-var-name": "^2.0.0",
